--- a/promotions/templates/home/index.html
+++ b/promotions/templates/home/index.html
@@ -104,13 +104,9 @@
         </div>
     </nav>
     <div class="header-slide">
-        <div><img style="width: 100%;" src="https://cdn.lynda.com/course/473879/473879-636457524814693787-16x9.jpg"
-                  alt="image html5 ejemplo"></div>
-        <div><img style="width: 100%;" src="http://gaming.gigabyte.eu/AMDmotherboard/images/AMD_mb_board_noLED_1920.jpg"
-                  alt="image html5 ejemplo"></div>
-        <div><img style="width: 100%;"
-                  src="http://www.kimberley.co.za/wp-content/uploads/2017/06/29621_Fish_Aways-Hash_Brown_Burger_Special-PM-201706.jpg"
-                  alt="image html5 ejemplo"></div>
+        <div id="header-slick" class="container">
+
+        </div>
     </div>
 </header>
 <nav>
@@ -146,7 +142,9 @@
                 </div><!-- /input-group -->
             </div>
         </div>
-        <div class="container" style="margin-left: -11px;"><hr style="margin: 40px; border-top: 1px solid #e0e0e0;"></div>
+        <div class="container" style="margin-left: -11px;">
+            <hr style="margin: 40px; border-top: 1px solid #e0e0e0;">
+        </div>
         <section class="container">
             <div class="promotion-container">
                 <div class="promotions">
@@ -199,7 +197,96 @@
         </div>
     </div>
 </footer>
-<article id="modal-promotion"></article>
+<article id="modal-promotion">
+    <div class='modal fade modal-box' data-backdrop='static' data-keyboard='false' tabindex='-1' role='dialog'>
+        <div class='modal-dialog modal-lg' role='document'>
+            <div class='modal-content'>
+                <div class='modal-header'>
+                    <button type='button' class='close' data-dismiss='modal' aria-label='Close'><span aria-hidden='true'>&times;</span></button>
+                        <h4 id='modal-promo-name' class='modal-title' data-id=""></h4>
+                </div>
+                <div class='modal-body'>
+                    <div class='panel panel-default'>
+                        <div class='panel-body'>
+                            <div class='row'>
+                                <div class='col-md-6'>
+                                    <div class='img-modal-promotion'>
+                                        <img src="" alt='Smiley face' height='42' width='42'>
+                                    </div>
+                                </div>
+                                <div class='col-md-6'>
+                                    <div class='panel panel-default' style='background-color: #efefef;'>
+                                        <div class='panel-body'>
+                                            <div class='promo-detail'><h4>Detalle de la promoción</h4></div>
+                                            <hr style='margin: 5px 0; border-top: 1px solid #c3c3c3;'>
+                                            <div class='promo-cost row'>
+                                                <div class='col-md-4'><b>Valor:</b></div>
+                                                <div class='col-md-8 modal-field-cost'></div>
+                                            </div>
+                                            <div class='promo-city row'>
+                                                <div class='col-md-4'><b>ciudad:</b></div>
+                                                <div class='col-md-8 modal-field-city'></div>
+                                            </div>
+                                            <div class='promo-cost row'>
+                                                <div class='col-md-4'><b>Finaliza:</b></div>
+                                                <div class='col-md-8 modal-field-end-date'></div>
+                                            </div>
+                                            <hr style='margin: 5px 0; border-top: 1px solid #c3c3c3;'>
+                                            <div class='promo-description'><b>Descripción:</b>
+                                                <div class='text-promo-description'></div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <hr>
+                    <div class='row' style='background-color: #efefef; margin: 0;'>
+                        <div class='col-md-3'>
+                            <div class='promo-category'></div>
+                        </div>
+                        <div class='col-md-1' style='width:24px'> | </div>
+                        <div class='col-md-1'>
+                            <a href+'#' class='promo-favoritos'><i class='fas fa-thumbs-up'></i> like</a>
+                        </div>
+                        <div class='col-md-1' style='width:24px'> | </div>
+                        "<div class='col-md-6'></div>
+                    </div>
+                    <hr>
+                    <div class='promo-message-tittle'><h4>Agrega un comentario:</h4></div>
+                    <div class='panel panel-default' style='background-color: #efefef;'>
+                        <div class='panel-body'>
+                            <div class='alert alert-danger alert-logged-messsage' role='alert'><b>Hola!</b> Ingresa al sistema para poder agregar un mensaje.</div>
+                            <form>
+                                <div class='email-message'>
+                                    <div class='input-group'>
+                                        <span class='input-group-addon' id='basic-addon1'><i class='fas fa-envelope'></i> Email</span>
+                                        <input id='email-message' type='email' class='form-control' placeholder='Email' aria-describedby='basic-addon1'>
+                                    </div>
+                                </div>
+                                <div class='text-message'>
+                                    <textarea id='text-message' class='form-control' rows='3'></textarea>
+                                </div>
+                                <div class='div-send-commit'>
+                                    <button id='btn-send-commit' type='submit' class='btn btn-primary'>Comentar!</button>
+                                </div>
+                            </form>
+                            <hr style='border-top: 1px solid #c3c3c3;'>
+                            <div class='promo-message-added'><h5>Mensajes agregados:</h5></div>
+                            <div class='panel panel-default'>
+                                <div id='created-message' class='panel-body'></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class='modal-footer'>
+                    <button type='button' class='btn btn-default close-modal' data-dismiss='modal'>Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
+</article>
 <article id="modal-register">
     <div class="modal fade modal-register" data-backdrop="static" data-keyboard="false" tabindex="-1" role="dialog">
         <div class="modal-dialog modal-lg" role="document">
@@ -286,12 +373,7 @@
         </div><!-- /.modal-dialog -->
     </div><!-- /.modal -->
 </article>
-<article id="loaded-promotion-modal">
-    <div id="text-loaded">
-        <div>Cargando contenido</div>
-        <div><i class="fas fa-sync"></i></div>
-    </div>
-</article>
+
 <script src="{% static 'dist/jquery/jquery-3.3.1.min.js' %}"></script>
 <script src="{% static 'dist/cookiejs/js.cookie.min.js' %}"></script>
 <script src="{% static 'dist/bootstrap/js/bootstrap.min.js' %}"></script>
