--- a/promotions/templates/email/welcome.html
+++ b/promotions/templates/email/welcome.html
@@ -499,7 +499,7 @@ body{background-color:#fff}.logo a:hover,.logo a:focus{color:#859bb1 !important}
 
               <div style="Margin-left: 20px;Margin-right: 20px;">
       <div class="btn btn--flat btn--medium" style="Margin-bottom: 20px;text-align: center;">
-        <!--[if !mso]--><a style="border-radius: 4px;display: inline-block;font-size: 12px;font-weight: bold;line-height: 22px;padding: 10px 20px;text-align: center;text-decoration: none !important;transition: opacity 0.1s ease-in;color: #ffffff !important;background-color: #e31212;font-family: Avenir, sans-serif;" href="http://{{ link_url }}">Confirmar</a><!--[endif]-->
+        <!--[if !mso]--><a style="border-radius: 4px;display: inline-block;font-size: 12px;font-weight: bold;line-height: 22px;padding: 10px 20px;text-align: center;text-decoration: none !important;transition: opacity 0.1s ease-in;color: #ffffff !important;background-color: #e31212;font-family: Avenir, sans-serif;" href="{{ link_url }}">Confirmar</a><!--[endif]-->
       <!--[if mso]><p style="line-height:0;margin:0;">&nbsp;</p><v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" href="http://datola.createsend1.com/t/j-l-bwhkjt-l-r/" style="width:96px" arcsize="10%" fillcolor="#E31212" stroke="f"><v:textbox style="mso-fit-shape-to-text:t" inset="0px,9px,0px,9px"><center style="font-size:12px;line-height:22px;color:#FFFFFF;font-family:Avenir,sans-serif;font-weight:bold;mso-line-height-rule:exactly;mso-text-raise:4px">Confirmar</center></v:textbox></v:roundrect><![endif]--></div>
     </div>
 
