Update url de profile

--- a/promotions/templates/home/index.html
+++ b/promotions/templates/home/index.html
@@ -42,7 +42,7 @@
                             <ul class="dropdown-menu">
                                 <li><a href="#">Menu de usuario:</a></li>
                                 <li role="separator" class="divider"></li>
-                                <li><a href="localhost:8000/profile/">Profile</a></li>
+                                <li><a href="https://cpromotion.herokuapp.com/profile/">Profile</a></li>
                                 <li><a href="#">Promociones</a></li>
                                 <li><a href="#">Categorías</a></li>
                                 <li role="separator" class="divider"></li>
