Fix bug en routing

--- a/promotions/templates/home/valid_token.html
+++ b/promotions/templates/home/valid_token.html
@@ -107,11 +107,7 @@
             </div>
         </div>
     </nav>
-    <div class="header-slide">
-        <div id="header-slick" class="container">
 
-        </div>
-    </div>
 </header>
 <nav>
     <div class="slider-docks"></div>
@@ -123,8 +119,8 @@
             <h3>¡Felicitaciones! tu Cuenta ha sido confirmada</h3>
             <p>Ahora tienes acceso a las mejores promociones del pais. </p>
             <p></p>
-            <button class="btn btn-primary" href="https://cpromotion.herokuapp.com">
-                Ir a inicio
+            <button class="btn btn-primary" >
+               <a href="https://cpromotion.herokuapp.com">Ir a inicio</a>
             </button>
         </div>
 
