UI improvement on validated_token view

--- a/promotions/templates/home/valid_token.html
+++ b/promotions/templates/home/valid_token.html
@@ -115,13 +115,15 @@
 <section>
 
     <div class="row">
-        <div class="col-12" style="text-align: center;margin:auto">
+        <div class="col-12" style="text-align: center;margin:auto; min-height:220px">
             <h3>¡Felicitaciones! tu Cuenta ha sido confirmada</h3>
             <p>Ahora tienes acceso a las mejores promociones del pais. </p>
             <p></p>
-            <button class="btn btn-primary" >
-               <a href="https://cpromotion.herokuapp.com">Ir a inicio</a>
-            </button>
+
+               <a href="https://cpromotion.herokuapp.com">
+                   <button class="btn btn-primary" >Ir a inicio </button>
+               </a>
+
         </div>
 
     </div>
